# dc_semester_project

./: .gitignore  README.rst  pyproject.toml
data/: entropy_compression - Sheet1.csv
data/samples/: sample1b.data  sample5b.data
examples/: example.ipynb
src/dc_semester_project/: __init__.py  checker.py  compressor.py  decompressor.py
src/dc_semester_project/utils/: __init__.py  huffman.py  lz77.py  lz78.py
